# fankor

./: .gitignore  README.md
framework/: Cargo.toml
framework/fankor/: Cargo.toml
framework/fankor-account/: Cargo.toml
framework/fankor-account/src/: lib.rs
framework/fankor-constant/: Cargo.toml
framework/fankor-constant/src/: attributes.rs  lib.rs
framework/fankor-general/: Cargo.toml
framework/fankor-general/src/: lib.rs
framework/fankor-macros/: Cargo.toml
framework/fankor-macros/src/: lib.rs  utils.rs
framework/fankor-macros/src/fnk_syn/: meta_args.rs  meta_field.rs  meta_type.rs  mod.rs
framework/fankor-macros/src/macros/: account_offset.rs  account_size.rs  base.rs  const_pubkey.rs  constant.rs  deserialize.rs  enum_discriminants.rs  field_offset.rs  mod.rs  serialize.rs  setup.rs  ts_gen.rs  zero_copy.rs
framework/fankor-macros/src/macros/account/: arguments.rs  mod.rs  offset.rs  size.rs  ts_gen.rs
framework/fankor-macros/src/macros/accounts/: arguments.rs  mod.rs  variant.rs
framework/fankor-macros/src/macros/constant/: attributes.rs  mod.rs
framework/fankor-macros/src/macros/deserialize/: enums.rs  mod.rs  structs.rs
framework/fankor-macros/src/macros/error/: arguments.rs  attributes.rs  mod.rs  variant.rs
framework/fankor-macros/src/macros/instruction/: arguments.rs  enums.rs  field.rs  mod.rs  parser.rs  structs.rs
framework/fankor-macros/src/macros/instruction_accounts/: arguments.rs  enum.rs  enums.rs  field.rs  mod.rs  struct.rs  structs.rs
framework/fankor-macros/src/macros/program/: cpi.rs  lpi.rs  mod.rs  program.rs  programs.rs
framework/fankor-macros/src/macros/serialize/: enums.rs  mod.rs  structs.rs
framework/fankor-macros/src/macros/zero_copy/: mod.rs
framework/fankor-syn/: Cargo.toml
framework/fankor-syn/src/: expressions.rs  lib.rs  solana.rs
framework/fankor-syn/src/fankor/: mod.rs
framework/fankor-syn/src/fankor/config/: accounts.rs  build.rs  instructions.rs  mod.rs  program.rs
framework/fankor/src/: context.rs  errors.rs  lib.rs  macros.rs  prelude.rs  rpc_errors.rs  testable_program.rs
framework/fankor/src/cpi/: macros.rs  mod.rs
framework/fankor/src/cpi/associated_token/: create_associated_token_account.rs  create_associated_token_account_idempotent.rs  mod.rs  recover_nested.rs
framework/fankor/src/cpi/metadata/: approve_collection_authority.rs  approve_use_authority.rs  burn_nft.rs  create_master_edition_v3.rs  create_metadata_accounts_v3.rs  mint_edition_from_master_edition_via_vault_proxy.rs  mod.rs  revoke_use_authority.rs  set_and_verify_sized_collection_item.rs  set_collection_size.rs  set_token_standard.rs  unverify_collection.rs  unverify_sized_collection_item.rs  utilize.rs  verify_collection.rs  verify_sized_collection_item.rs
framework/fankor/src/cpi/system_program/: advance_nonce.rs  allocate.rs  allocate_with_seed.rs  assign.rs  assign_with_seed.rs  authorize_nonce_account.rs  create_account.rs  create_account_with_seed.rs  mod.rs  transfer.rs  transfer_with_seed.rs  upgrade_nonce_account.rs  withdraw_nonce_account.rs
framework/fankor/src/cpi/token/: approve.rs  approve_checked.rs  burn.rs  burn_checked.rs  close_account.rs  freeze_account.rs  initialize_account.rs  initialize_account2.rs  initialize_account3.rs  initialize_mint.rs  initialize_mint2.rs  initialize_multisig.rs  initialize_multisig2.rs  mint_to.rs  mint_to_checked.rs  mod.rs  revoke.rs  set_authority.rs  sync_native.rs  thaw_account.rs  transfer.rs  transfer_checked.rs
framework/fankor/src/cpi/token_2022/: approve.rs  approve_checked.rs  burn.rs  burn_checked.rs  close_account.rs  freeze_account.rs  initialize_account3.rs  initialize_mint2.rs  initialize_multisig2.rs  mint_to.rs  mint_to_checked.rs  mod.rs  revoke.rs  set_authority.rs  sync_native.rs  thaw_account.rs  transfer_checked.rs
framework/fankor/src/helpers/: accounts.rs  errors.rs  mod.rs
framework/fankor/src/models/: context.rs  cpi_return.rs  mod.rs
framework/fankor/src/models/accounts/: account.rs  account_list.rs  argument.rs  boxed.rs  default_account.rs  either.rs  maybe_uninit.rs  mod.rs  no_accounts.rs  option.rs  optional_account.rs  optional_zc_account.rs  program.rs  referenced.rs  rest.rs  rest_arguments.rs  single_either.rs  sysvar_account.rs  unchecked_account.rs  uninitialized.rs  vector.rs  zero_copy.rs  zero_copy_account.rs
framework/fankor/src/models/accounts/zero_copy/: account.rs  mod.rs  optional_account.rs
framework/fankor/src/models/programs/: associated_token.rs  bpf_loader.rs  macros.rs  metadata.rs  mod.rs  system_program.rs  token.rs  token_2022.rs
framework/fankor/src/models/types/: arrays.rs  binary_map.rs  binary_set.rs  binary_vectors.rs  extensions.rs  integers.rs  maps.rs  mod.rs  ranges.rs  sets.rs  strings.rs  unsigned.rs  vectors.rs
framework/fankor/src/models/zc_types/: arrays.rs  binary_map.rs  binary_set.rs  binary_vectors.rs  bool.rs  boxed.rs  extensions.rs  maps.rs  mod.rs  numbers.rs  options.rs  pubkey.rs  pubkeys.rs  ranges.rs  sets.rs  strings.rs  tuples.rs  vectors.rs
framework/fankor/src/test_helpers/: accounts.rs  errors.rs  instructions.rs  mod.rs  programs.rs
framework/fankor/src/tests/: account_info.rs  banks_client.rs  mod.rs  program_test.rs  program_test_context.rs
framework/fankor/src/traits/: account.rs  account_size.rs  instruction.rs  instruction_account.rs  instruction_accounts.rs  mod.rs  pda_checker.rs  pda_generator.rs  program.rs  ts_gen.rs  zero_copy.rs
framework/fankor/src/ts_gen/: mod.rs
framework/fankor/src/ts_gen/accounts/: account_impls.rs  accounts.rs  mod.rs
framework/fankor/src/ts_gen/context/: data.rs  mod.rs
framework/fankor/src/ts_gen/types/: builtin.rs  fankor.rs  mod.rs
framework/fankor/src/utils/: bpf_writer.rs  close.rs  deserialize.rs  mod.rs  realloc.rs  rent.rs  seeds.rs  writers.rs
test/: Cargo.toml  Fankor.toml  build.rs
test/src/: accounts.rs  arguments.rs  constants.rs  entrypoint.rs  errors.rs  instruction.rs  lib.rs  program.rs  serialization.rs  tests.rs
test/src/accounts/: enum_account.rs  mod.rs  struct_account.rs
(+85 files in other folders)
