[package]
name = "fankor-test"
version = "0.1.0"
authors = ["Julio Treviño Páez <julio.tpaez@gmail.com>"]
repository = "https://github.com/juliotpaez/fankor"
license = "Apache-2.0"
description = "Fankor framework test"
edition = "2021"

[lib]
crate-type = ["cdylib", "lib"]

[features]
no-entrypoint = ["fankor/no-entrypoint"]
library = ["fankor/library"]
test = ["fankor/test"]
ts-gen = ["fankor/ts-gen"]

[dependencies]
fankor = { path = "../framework/fankor", features = ["token-program", "metadata-program"] }

[dev-dependencies]
fankor = { path = "../framework/fankor", features = ["token-program", "metadata-program", "test"] }
solana-sdk = "1.14.10"
solana-program-test = "1.14.10"
tokio = { version = "1.14.1", features = ["macros"] }

[profile.release]
opt-level = "z"
overflow-checks = true
lto = "fat"
codegen-units = 1
panic = "abort"

[profile.release.build-override]
opt-level = "z"
overflow-checks = true
codegen-units = 1
incremental = false