[package]
name = "fankor-account"
version = "0.1.0"
authors = ["Julio Treviño Páez <julio.tpaez@gmail.com>"]
repository = "https://github.com/juliotpaez/fankor"
license = "Apache-2.0"
description = "Fankor macro for defining an account"
edition = "2021"

[lib]
proc-macro = true

[dependencies]
quote = "1.0.17"
proc-macro2 = "1.0.36"
syn = { version = "1.0.90", features = ["full"] }