[package]
name = "fankor-constant"
version = "0.1.0"
authors = ["Julio Treviño Páez <julio.tpaez@gmail.com>"]
repository = "https://github.com/juliotpaez/fankor"
license = "Apache-2.0"
description = "Fankor macro for defining a constant"
edition = "2021"

[lib]
proc-macro = true

[dependencies]
proc-macro2 = "1.0.36"
quote = "1.0.17"
syn = { version = "1.0.90", features = ["full"] }
fankor-syn = { path = "../fankor-syn" }