[package]
name = "fankor-macros"
version = "0.1.0"
authors = ["Julio Treviño Páez <julio.tpaez@gmail.com>"]
repository = "https://github.com/juliotpaez/fankor"
license = "Apache-2.0"
description = "Fankor macro for defining a constant"
edition = "2021"

[lib]
proc-macro = true

[dependencies]
bs58 = "0.4.0"
proc-macro2 = "1.0.40"
quote = "1.0.20"
sha2 = "0.10.2"
syn = { version = "1.0.98", features = ["full"] }
fankor-syn = { path = "../fankor-syn" }