[package]
name = "fankor-macros"
version = "0.1.0"
authors = ["Julio Treviño Páez <julio.tpaez@gmail.com>"]
repository = "https://github.com/juliotpaez/fankor"
license = "Apache-2.0"
description = "Fankor macro for defining a constant"
edition = "2021"

[lib]
proc-macro = true

[dependencies]
borsh-derive-internal = "0.9.3"
bs58 = "0.4.0"
convert_case = "0.6.0"
proc-macro2 = "1.0.47"
quote = "1.0.21"
syn = { version = "1.0.103", features = ["full"] }
fankor-syn = { path = "../fankor-syn" }