[package]
name = "fankor-macros"
version = "0.1.0"
authors = ["Julio Treviño Páez <julio.tpaez@gmail.com>"]
repository = "https://github.com/juliotpaez/fankor"
license = "Apache-2.0"
description = "Fankor macro for defining a constant"
edition = "2021"

[lib]
proc-macro = true

[dependencies]
bs58 = "0.4.0"
convert_case = "0.6.0"
proc-macro2 = { version = "1.0.56", features = ["span-locations"] }
quote = "1.0.26"
syn = { version = "1.0.109", features = ["full"] }