[package]
name = "fankor-syn"
version = "0.1.0"
authors = ["Julio Treviño Páez <julio.tpaez@gmail.com>"]
repository = "https://github.com/juliotpaez/fankor"
license = "Apache-2.0"
description = "Fankor utilities for macros"
edition = "2021"

[dependencies]
bs58 = "0.4.0"
proc-macro2 = "1.0.47"
quote = "1.0.21"
serde = { version = "1.0.147", features = ["derive"] }
solana-program = "1.14.8"
syn = { version = "1.0.103", features = ["full"] }
toml = "0.5.9"