[package]
name = "fankor"
version = "0.1.0"
authors = ["Julio Treviño Páez <julio.tpaez@gmail.com>"]
repository = "https://github.com/juliotpaez/fankor"
license = "Apache-2.0"
description = "Fankor framework to build Solana programs"
edition = "2021"

[features]
no-entrypoint = []
library = ["no-entrypoint"]
metadata-program = ["mpl-token-metadata"]
test = ["token-program", "async-trait", "solana-banks-client", "solana-program-test", "solana-program-runtime", "solana-sdk"]
token-program = ["spl-token", "spl-associated-token-account"]
token-program-2022 = ["spl-token-2022", "spl-associated-token-account"]

[dependencies]
async-trait = { version = "0.1.56", optional = true }
borsh = "0.9.3"
bs58 = "0.4.0"
sha2 = "0.10.6"
solana-banks-client = { version = "1.14.10", optional = true }
solana-program = "1.14.10"
solana-program-test = { version = "1.14.10", optional = true }
solana-program-runtime = { version = "1.14.10", optional = true }
solana-security-txt = "1.0.2"
solana-sdk = { version = "1.14.10", optional = true }
spl-associated-token-account = { version = "1.1.1", optional = true, features = ["no-entrypoint"] }
spl-token = { version = "3.5.0", optional = true, features = ["no-entrypoint"] }
mpl-token-metadata = { version = "1.4.3", optional = true, features = ["no-entrypoint"] }
time = "=0.3.15"
fankor-macros = { path = "../fankor-macros" }