[package]
name = "fankor"
version = "0.1.0"
authors = ["Julio Treviño Páez <julio.tpaez@gmail.com>"]
repository = "https://github.com/juliotpaez/fankor"
license = "Apache-2.0"
description = "Fankor framework to build Solana programs"
edition = "2021"

[features]
all-programs = ["bpf-loader-program", "metadata-program", "token-program", "token-program-2022"]
bpf-loader-program = ["solana-bpf-loader-program", "bincode"]
no-entrypoint = []
library = ["no-entrypoint"]
metadata-program = ["mpl-token-metadata"]
test = ["token-program", "async-trait", "solana-banks-client", "solana-program-test", "solana-program-runtime", "solana-sdk"]
token-program = ["spl-token", "spl-associated-token-account"]
token-program-2022 = ["spl-token-2022", "spl-associated-token-account"]
ts-gen = ["lazy_static", "solana-sdk"]

[dependencies]
async-trait = { version = "0.1.64", optional = true }
borsh = "0.9.3"
bincode = { version = "1.3.3", optional = true }
bs58 = "0.4.0"
convert_case = "0.6.0"
lazy_static = { version = "1.4.0", optional = true }
sha2 = "0.10.6"
solana-banks-client = { version = "1.15.0", optional = true }
solana-bpf-loader-program = { version = "1.15.0", optional = true }
solana-program = "1.15.0"
solana-program-test = { version = "1.15.0", optional = true }
solana-program-runtime = { version = "1.15.0", optional = true }
solana-security-txt = "1.1.0"
solana-sdk = { version = "1.15.0", optional = true }
spl-associated-token-account = { version = "1.1.2", optional = true, features = ["no-entrypoint"] }
spl-token = { version = "3.5.0", optional = true, features = ["no-entrypoint"] }
spl-token-2022 = { version = "0.5.0", optional = true, features = ["no-entrypoint"] }
static_assertions = "1.1.0"
mpl-token-metadata = { version = "1.8.1", optional = true, features = ["no-entrypoint"] }
time = "0.3.17"
fankor-macros = { path = "../fankor-macros" }

[dev-dependencies]
rand = "0.8.5"